<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_text_view"
        android:id="@+id/textView"
        android:textAppearance="?android:textAppearanceLarge"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/message"
        android:gravity="top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_font_seekbar"
        android:id="@+id/textView2"
        android:textAppearance="?android:textAppearanceLarge"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seek_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_color_radio_group"
        android:id="@+id/textView3"
        android:textAppearance="?android:textAppearanceLarge"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red_radio_button"
        android:id="@+id/red_color"
        android:onClick="changeColor"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_radio_button"
        android:id="@+id/blue_color"
        android:onClick="changeColor"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_radio_button"
        android:id="@+id/green_color"
        android:onClick="changeColor"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/save_button"
        android:onClick="saveSettings"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:id="@+id/clear_button"
        android:onClick="clearSettings"/>
</LinearLayout>
